Make sure to exclude alignments from county results

--- a/src/js/components/county-detail/county-detail.less
+++ b/src/js/components/county-detail/county-detail.less
@@ -10,6 +10,7 @@ county-detail {
       margin-bottom: 8px;
       margin-right: 6px;
       display: inline-block;
+      text-transform: uppercase;
     }
 
     .outer-county-select {
